<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.task.vasskob.firebase.ui.SignInActivity">


    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/firebase_lockup_400"/>

    <LinearLayout
        android:id="@+id/layout_email_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_buttons"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email_password"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>


        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_social"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/facebook_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:padding="0dp"
            android:src="@drawable/ic_facebook"
            android:text="@string/sign_in"/>


        <ImageButton
            android:id="@+id/g_plus_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="0dp"
            android:src="@drawable/ic_g_plus"
            android:text="@string/sign_up"/>

    </LinearLayout>


</RelativeLayout>
